feat: add a react example application
